# c-parser

./: .gitignore  README.md  f.json  page.html  pyproject.toml
migrations/: env.py
migrations/versions/: 5e551e8f99d2_edit_relationships_rename_comments_.py  62ca6852dcd2_delete_media_id_from_comments_table.py  6b10b5623e22_edit_relationships.py  72a6024af995_file_hash_stops_being_unique.py  8876e80c9faf_update_enums_1.py  967875e2a046_add_relationships.py  978c79c3a401_file_hash_is_now_nullable_true.py  9c910220a032_initial.py  df94157ac48b_edit_models_fields.py
src/: data_classes.py  enums.py  main.py
src/crawler/: crawler_control.py  posts_collection.py  posts_filter.py  posts_media_downloader.py  scrapper.py  scrappers_control.py
src/crawler/collection/: __init__.py  posts_categorizer.py  posts_filter.py  posts_media_downloader.py
src/crawler/scrappers/: __init__.py  joyreactor_scrapper.py  ninegag_scrapper.py  pikabu_scrapper.py  scrapper.py
src/database/: database.py  db_manager.py  models.py  overbuilds.py  queries.py
src/parsing/: parsing_control.py
src/parsing/scrappers/: __init__.py  nine_gag.py  pikabu.py  scrapper.py
src/schemas/: __init__.py  enums.py  schemas.py
