[tool.poetry]
name = "c-parser"
version = "0.1.0"
description = ""
authors = ["blatmen23 <dindilon2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
aiomysql = "^0.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
alembic = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
